# excellogpy

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python.yml  tests.yml
logpy/: __init__.py  entry.py  log.py
logpy/model/: __init__.py
tests/: __init__.py  test_entry.py  test_log.py
tests/logs/log01/2022/: w44.xlsx
